# tcp-task

./: CMakeLists.txt  README.md  build.sh  main.cpp
tcp-client/: TCPClient.cpp  TCPClient.h
tcp-server/: TCPServer.cpp  TCPServer.h
